Bug 605277 - Do not show the form validation error message in the tooltip if title is set. r+a=sicking